syntax = "proto3";

package etu;

option go_package = "github.com/icco/etu-backend/proto";

// Timestamp message
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// Note message
message Note {
  string id = 1;
  string content = 2;
  repeated string tags = 3;
  Timestamp created_at = 4;
  Timestamp updated_at = 5;
  optional string notion_uuid = 6;
  optional string external_id = 7;  // Notion page ID
  optional Timestamp last_synced_to_notion = 8;
}

// Tag message
message Tag {
  string id = 1;
  string name = 2;
  int32 count = 3;
  Timestamp created_at = 4;
}

// User message
message User {
  string id = 1;
  string email = 2;
  optional string name = 3;
  optional string image = 4;
  string subscription_status = 5;
  optional Timestamp subscription_end = 6;
  Timestamp created_at = 7;
  optional string stripe_customer_id = 8;
}

// API Key message
message ApiKey {
  string id = 1;
  string name = 2;
  string key_prefix = 3;
  Timestamp created_at = 4;
  optional Timestamp last_used = 5;
}

// UserSettings message
message UserSettings {
  string user_id = 1;
  optional string notion_key = 2;
  optional string username = 3;
  Timestamp created_at = 4;
  Timestamp updated_at = 5;
}

// Request/Response messages for Notes

message ListNotesRequest {
  string user_id = 1;      // Required for auth context
  string search = 2;
  repeated string tags = 3;
  string start_date = 4;   // ISO 8601 format
  string end_date = 5;     // ISO 8601 format
  int32 limit = 6;
  int32 offset = 7;
}

message ListNotesResponse {
  repeated Note notes = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message CreateNoteRequest {
  string user_id = 1;      // Required for auth context
  string content = 2;
  repeated string tags = 3;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
}

message GetNoteResponse {
  Note note = 1;
}

message UpdateNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
  optional string content = 3;
  repeated string tags = 4;
  bool update_tags = 5;    // Flag to indicate if tags should be updated
}

message UpdateNoteResponse {
  Note note = 1;
}

message DeleteNoteRequest {
  string user_id = 1;      // Required for auth context
  string id = 2;
}

message DeleteNoteResponse {
  bool success = 1;
}

message GetNotesWithFewTagsRequest {
  string user_id = 1;
  int32 max_tags = 2;  // Get notes with fewer than this many tags
}

message GetNotesWithFewTagsResponse {
  repeated Note notes = 1;
}

message AddTagsToNoteRequest {
  string user_id = 1;
  string note_id = 2;
  repeated string tags = 3;  // Tags to add (without removing existing)
}

message AddTagsToNoteResponse {
  Note note = 1;
}

message GetNoteByNotionUUIDRequest {
  string user_id = 1;
  string notion_uuid = 2;
}

message GetNoteByNotionUUIDResponse {
  optional Note note = 1;  // Optional because note may not exist
}

// Request/Response messages for Tags

message ListTagsRequest {
  string user_id = 1;      // Required for auth context
}

message ListTagsResponse {
  repeated Tag tags = 1;
}

// Auth request/response messages

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  User user = 1;
}

message AuthenticateRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateResponse {
  bool success = 1;
  optional User user = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByStripeCustomerIdRequest {
  string stripe_customer_id = 1;
}

message GetUserByStripeCustomerIdResponse {
  optional User user = 1;
}

message UpdateUserSubscriptionRequest {
  string user_id = 1;
  string subscription_status = 2;
  optional string stripe_customer_id = 3;
  optional Timestamp subscription_end = 4;
}

message UpdateUserSubscriptionResponse {
  User user = 1;
}

message ListAllUsersRequest {
  // No parameters - returns all users (M2M auth required)
}

message ListAllUsersResponse {
  repeated User users = 1;
}

message ListUsersWithNotionKeysRequest {
  // No parameters - returns users with Notion keys (M2M auth required)
}

message ListUsersWithNotionKeysResponse {
  repeated User users = 1;
}

// API Keys request/response messages

message CreateApiKeyRequest {
  string user_id = 1;
  string name = 2;
}

message CreateApiKeyResponse {
  ApiKey api_key = 1;
  string raw_key = 2;
}

message ListApiKeysRequest {
  string user_id = 1;
}

message ListApiKeysResponse {
  repeated ApiKey api_keys = 1;
}

message DeleteApiKeyRequest {
  string user_id = 1;
  string key_id = 2;
}

message DeleteApiKeyResponse {
  bool success = 1;
}

message VerifyApiKeyRequest {
  string raw_key = 1;
}

message VerifyApiKeyResponse {
  bool valid = 1;
  optional string user_id = 2;
}

// UserSettings request/response messages

message GetUserSettingsRequest {
  string user_id = 1;
}

message GetUserSettingsResponse {
  UserSettings settings = 1;
}

message UpdateUserSettingsRequest {
  string user_id = 1;
  optional string notion_key = 2;
  optional string username = 3;
}

message UpdateUserSettingsResponse {
  UserSettings settings = 1;
}

// Sync request/response messages

message GetSyncStateRequest {
  string user_id = 1;
}

message GetSyncStateResponse {
  optional Timestamp last_synced_at = 1;
}

message UpdateSyncStateRequest {
  string user_id = 1;
  Timestamp last_synced_at = 2;
}

message UpdateSyncStateResponse {
  bool success = 1;
}

message UpsertNoteFromNotionRequest {
  string user_id = 1;
  string notion_uuid = 2;
  string page_id = 3;
  string content = 4;
  repeated string tags = 5;
  Timestamp created_at = 6;
  Timestamp updated_at = 7;
}

message UpsertNoteFromNotionResponse {
  Note note = 1;
  bool is_new = 2;
}

message GetNotesNeedingSyncToNotionRequest {
  string user_id = 1;
}

message GetNotesNeedingSyncToNotionResponse {
  repeated Note notes = 1;
}

message MarkNoteSyncedToNotionRequest {
  string note_id = 1;
  string page_id = 2;
  string notion_uuid = 3;
}

message MarkNoteSyncedToNotionResponse {
  bool success = 1;
}

message UpdateNoteSyncTimeRequest {
  string note_id = 1;
}

message UpdateNoteSyncTimeResponse {
  bool success = 1;
}

// Service definitions

service NotesService {
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
  rpc GetNotesWithFewTags(GetNotesWithFewTagsRequest) returns (GetNotesWithFewTagsResponse);
  rpc AddTagsToNote(AddTagsToNoteRequest) returns (AddTagsToNoteResponse);
  rpc GetNoteByNotionUUID(GetNoteByNotionUUIDRequest) returns (GetNoteByNotionUUIDResponse);
}

service TagsService {
  rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByStripeCustomerId(GetUserByStripeCustomerIdRequest) returns (GetUserByStripeCustomerIdResponse);
  rpc UpdateUserSubscription(UpdateUserSubscriptionRequest) returns (UpdateUserSubscriptionResponse);
  rpc ListAllUsers(ListAllUsersRequest) returns (ListAllUsersResponse);
  rpc ListUsersWithNotionKeys(ListUsersWithNotionKeysRequest) returns (ListUsersWithNotionKeysResponse);
}

service ApiKeysService {
  rpc CreateApiKey(CreateApiKeyRequest) returns (CreateApiKeyResponse);
  rpc ListApiKeys(ListApiKeysRequest) returns (ListApiKeysResponse);
  rpc DeleteApiKey(DeleteApiKeyRequest) returns (DeleteApiKeyResponse);
  rpc VerifyApiKey(VerifyApiKeyRequest) returns (VerifyApiKeyResponse);
}

service UserSettingsService {
  rpc GetUserSettings(GetUserSettingsRequest) returns (GetUserSettingsResponse);
  rpc UpdateUserSettings(UpdateUserSettingsRequest) returns (UpdateUserSettingsResponse);
}

service SyncService {
  rpc GetSyncState(GetSyncStateRequest) returns (GetSyncStateResponse);
  rpc UpdateSyncState(UpdateSyncStateRequest) returns (UpdateSyncStateResponse);
  rpc UpsertNoteFromNotion(UpsertNoteFromNotionRequest) returns (UpsertNoteFromNotionResponse);
  rpc GetNotesNeedingSyncToNotion(GetNotesNeedingSyncToNotionRequest) returns (GetNotesNeedingSyncToNotionResponse);
  rpc MarkNoteSyncedToNotion(MarkNoteSyncedToNotionRequest) returns (MarkNoteSyncedToNotionResponse);
  rpc UpdateNoteSyncTime(UpdateNoteSyncTimeRequest) returns (UpdateNoteSyncTimeResponse);
}
